<resources>
    <string name="app_name">NaiveDialog</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_popup_windows">Position1</string>
    <string name="sample_popup_windows2">Position2</string>
    <string name="sample_popup_windows3">Position3</string>
    <string name="popup_windows">Popup Windows</string>
    <string name="item1">Item1</string>
    <string name="item2">Item2</string>
    <string name="item3">Item3</string>
    <string name="item4">Item4</string>
    <string name="item5">Item5</string>
    <string name="popup_nothing">nothing</string>
    <string name="str_666">click to toast 666</string>
    <string name="dialog_content1">这是在 DialogFragment 中通过 \n AlertDialog 填充的 xml 的自定义对话框</string>
</resources>
