<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/item1"
            android:textSize="16sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/item2"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/item3"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/item4"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/item5"
            android:textSize="16sp" />

    </LinearLayout>
</FrameLayout>