<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PopActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:drawableTop="@drawable/nothing"
        android:text="@string/popup_nothing"
        android:textColor="@android:color/secondary_text_dark"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popup_windows"/>

        <Button
            android:id="@+id/btn_position1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_popup_windows"
            android:layout_marginStart="8dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_position2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_popup_windows2"
            android:layout_marginStart="8dp"
            android:textAllCaps="false"/>


    </LinearLayout>

</RelativeLayout>